DirectoryServer/.stack-work/logs/crypto-random-0.0.9.log
Configuring crypto-random-0.0.9...
Building crypto-random-0.0.9...
Preprocessing library crypto-random-0.0.9...
[1 of 8] Compiling Crypto.Random.Test ( Crypto\Random\Test.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Test.o )

Crypto\Random\Test.hs:23:1: warning: [-Wunused-imports]
    The import of `Control.Applicative' is redundant
      except perhaps to import instances from `Control.Applicative'
    To import instances alone, use: import Control.Applicative()
[2 of 8] Compiling Crypto.Random.Entropy.Source ( Crypto\Random\Entropy\Source.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Entropy\Source.o )
[3 of 8] Compiling Crypto.Random.Entropy.Windows ( Crypto\Random\Entropy\Windows.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Entropy\Windows.o )
[4 of 8] Compiling Crypto.Random.Entropy.RDRand ( Crypto\Random\Entropy\RDRand.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Entropy\RDRand.o )
[5 of 8] Compiling Crypto.Random.Entropy ( Crypto\Random\Entropy.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Entropy.o )
[6 of 8] Compiling Crypto.Random.Generator ( Crypto\Random\Generator.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\Generator.o )
[7 of 8] Compiling Crypto.Random    ( Crypto\Random.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random.o )
[8 of 8] Compiling Crypto.Random.API ( Crypto\Random\API.hs, .stack-work\dist\ca59d0ab\build\Crypto\Random\API.o )
cbits\rdrand.c: In function 'crypto_random_get_rand_bytes':

cbits\rdrand.c:72:16: error:
     warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
      int aligned = (unsigned long) buffer % 8;
                    ^
Installing library in
C:\sr\snapshots\658faa8e\lib\x86_64-windows-ghc-8.0.2\crypto-random-0.0.9-7dlLmaxS6pADgVONkJnTF1
Registering crypto-random-0.0.9...
